[gd_scene load_steps=3 format=3 uid="uid://dsk6vxkj8cfo7"]

[ext_resource type="Script" path="res://src/units/buildings/components/PickupItemsComponent.gd" id="1_lr342"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ekxxu"]
radius = 7.0

[node name="PickupItemsComponent" type="Area2D"]
script = ExtResource("1_lr342")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ekxxu")

[connection signal="body_entered" from="." to="." method="addUnit"]
[connection signal="body_exited" from="." to="." method="removeUnit"]
